# aasha-ai

./: README.md
backend/: pyproject.toml  v1.py  v2.py  v3-canary.py  v4.py  v5.py  v6.py  v7.py  v8.py
client/: netlify.toml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/prisma/: schema.prisma
client/src/app/: layout.tsx  page.tsx
client/src/app/(old)/: layout.tsx  page.tsx
client/src/app/(old)/chat2/: page.tsx
client/src/app/(old)/login/: page.tsx
client/src/app/(old)/signup/: page.tsx
client/src/app/(user)/: layout.tsx  sidebar.tsx
client/src/app/(user)/chat/: page.tsx
client/src/app/(user)/home/: page.tsx
client/src/app/(user)/settings/: page.tsx
client/src/app/(user)/tasks/: page.tsx
client/src/app/api/auth/check/: route.ts
client/src/app/api/auth/login/: route.ts
client/src/app/api/auth/logout/: route.ts
client/src/app/api/auth/register/: route.ts
client/src/app/chat/: layout.tsx  page.tsx
client/src/app/login/: page.tsx
client/src/app/signup/: page.tsx
client/src/components/: ChatSidebar.tsx  ChatWindow.tsx  Footer.tsx  LayoutClientWrapper.tsx  MentorsPage.tsx  Navbar.tsx
client/src/context/: LayoutContext.tsx
client/src/lib/: axios.ts
client/src/types/: chat.ts  task.ts
